# pico

./: .gitignore  CMakeLists.txt
.github/workflows/: build-firmware.yml
blink/: CMakeLists.txt
blink/cmake/: pico_sdk.cmake
blink/src/: blink.c
btn/src/: btn.c
interrupt/: CMakeLists.txt
interrupt/src/: interrupt.c
log/: CMakeLists.txt
log/src/: blink.c  log.c
queue/: CMakeLists.txt
queue/src/: queue.c
watchdog/src/: watchdog.c
wifi/: CMakeLists.txt  server.py
wifi/include/: lwipopts.h
wifi/src/: wifi.c
